[gd_scene load_steps=3 format=3 uid="uid://cpl5hkuemkr3r"]

[ext_resource type="Script" path="res://level/level_segments/level_segment.gd" id="1_v6hlk"]
[ext_resource type="TileSet" uid="uid://crkc6nidx4laj" path="res://level/tilemap_base.tres" id="2_d5wu7"]

[node name="LevelSegment" type="Node2D"]
script = ExtResource("1_v6hlk")

[node name="RespawnPoint" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(512, 960)

[node name="MapLimits" type="Node2D" parent="."]

[node name="TopLeft" type="Marker2D" parent="MapLimits"]
unique_name_in_owner = true
position = Vector2(-192, -192)

[node name="BottomRight" type="Marker2D" parent="MapLimits"]
unique_name_in_owner = true
position = Vector2(2240, 1344)

[node name="EntryDetection" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="UpdateNode" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="MapTilemap" type="TileMap" parent="UpdateNode"]
scale = Vector2(4, 4)
tile_set = ExtResource("2_d5wu7")
format = 2
